# loefsys

./: .buildinfo  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  Dockerfile  Dockerfile_dev  LICENSE  LICENSE.md  README.md  db.sqlite  docker-compose.yml  env-variables.html  flake.nix  genindex.html  getting-started.html  how-to-docstrings.html  index.html  manage.py  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tmp.txt  zappa_settings.json
.github/ISSUE_TEMPLATE/: other.md  user-story.md
.github/workflows/: django-test.yml  docker-image.yml  pages-sphinx.yml
_sources/: how-to-docstrings.rst.txt  index.rst.txt
_sources/api/: loefsys.contacts.models.member.rst.txt  loefsys.contacts.models.membership.rst.txt  loefsys.contacts.models.organization.rst.txt  loefsys.contacts.models.person.rst.txt  loefsys.contacts.models.study_registration.rst.txt  loefsys.events.apps.rst.txt  loefsys.events.models.managers.rst.txt  loefsys.events.models.registration.rst.txt  loefsys.groups.models.fraternity.rst.txt  loefsys.groups.models.membership.rst.txt  loefsys.reservations.models.boat.rst.txt  loefsys.reservations.models.material.rst.txt  loefsys.reservations.models.reservation.rst.txt  loefsys.reservations.models.rst.txt  loefsys.rst.txt  loefsys.scripts.code_scripts.rst.txt  loefsys.scripts.django_scripts.rst.txt  loefsys.scripts.sphinx_scripts.rst.txt  loefsys.settings.admin.rst.txt  loefsys.settings.auth.rst.txt  loefsys.settings.base.rst.txt  loefsys.settings.database.rst.txt  loefsys.settings.rst.txt  loefsys.settings.security.rst.txt  loefsys.settings.storage.rst.txt  loefsys.urls.rst.txt  loefsys.users.rst.txt  loefsys.wsgi.rst.txt
api/: loefsys.contacts.apps.html  loefsys.contacts.html  loefsys.contacts.models.address.html  loefsys.contacts.models.choices.html  loefsys.contacts.models.contact.html  loefsys.contacts.models.html  loefsys.contacts.models.member.html  loefsys.contacts.models.membership.html  loefsys.contacts.models.organization.html  loefsys.contacts.models.person.html  loefsys.contacts.models.study_registration.html  loefsys.events.apps.html  loefsys.events.html  loefsys.events.models.choices.html  loefsys.events.models.event.html  loefsys.events.models.html  loefsys.events.models.managers.html  loefsys.events.models.registration.html  loefsys.groups.apps.html  loefsys.groups.html  loefsys.groups.models.board.html  loefsys.groups.models.choices.html  loefsys.groups.models.committee.html  loefsys.groups.models.fraternity.html  loefsys.groups.models.group.html  loefsys.groups.models.html  loefsys.groups.models.membership.html  loefsys.groups.models.year_club.html  loefsys.html  loefsys.reservations.apps.html  loefsys.reservations.html  loefsys.reservations.models.boat.html  loefsys.reservations.models.choices.html  loefsys.reservations.models.html  loefsys.reservations.models.material.html  loefsys.reservations.models.reservable.html  loefsys.reservations.models.reservation.html  loefsys.reservations.models.room.html  loefsys.scripts.code_scripts.html  loefsys.scripts.django_scripts.html  (+21 more)
components/: wavy_seperator_bottom.py  wavy_seperator_full.py  wavy_seperator_top.py
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  Untitled Diagram.drawio  activitetien-de-registratie-beleid-voorstel.drawio  conf.py  entity_relation_diagram.drawio  env-variables.rst  getting-started.rst  how-to-docstrings.rst  howto.rst  index.md  index.rst  loefsys.events.models.rst  loefsys.events.rst  loefsys.groups.models.rst  loefsys.groups.rst  loefsys.reservations.models.rst  loefsys.reservations.rst  loefsys.rst  loefsys.settings.rst  loefsys.users.models.rst  loefsys.users.rst  loefsys.utils.rst  make.bat  modules.rst  users.rst
docs/_ext/: djangodocs.py  ref_aliases.py
docs/_static/: relations-contacts.md  relations-users.md
docs/api/: loefsys.contacts.apps.rst  loefsys.contacts.models.address.rst  loefsys.contacts.models.choices.rst  loefsys.contacts.models.contact.rst  loefsys.contacts.models.rst  loefsys.contacts.rst  loefsys.events.admin.rst  loefsys.events.models.choices.rst  loefsys.events.models.event.rst  loefsys.events.models.rst  loefsys.events.rst  loefsys.events.services.rst  loefsys.events.urls.rst  loefsys.events.views.rst  loefsys.groups.admin.rst  loefsys.groups.apps.rst  loefsys.groups.models.board.rst  loefsys.groups.models.choices.rst  loefsys.groups.models.committee.rst  loefsys.groups.models.group.rst  loefsys.groups.models.group_membership.rst  loefsys.groups.models.groups.rst  loefsys.groups.models.managers.rst  loefsys.groups.models.rst  loefsys.groups.models.year_club.rst  loefsys.groups.rst  loefsys.groups.views.rst  loefsys.manage.rst  loefsys.reservations.admin.rst  loefsys.reservations.apps.rst  loefsys.reservations.models.choices.rst  loefsys.reservations.models.complication_log.rst  loefsys.reservations.models.reservable.rst  loefsys.reservations.models.reservation_log.rst  loefsys.reservations.models.room.rst  loefsys.reservations.models.rst  loefsys.reservations.rst  loefsys.reservations.views.rst  loefsys.rst  loefsys.scripts.rst  (+24 more)
docs/autoapi/: index.rst
docs/drawio/: activitetien-de-registratie-beleid-voorstel.drawio
infra/: .env.example
infra/loefsys/: Dockerfile  Dockerfile.dev
loefsys/: __init__.py  __main__.py  celery.py  conftest.py  manage.py  urls.py  views.py  wsgi.py
loefsys/accountinfopage/: __init__.py  apps.py  forms.py  tests.py  urls.py  views.py
loefsys/committees/: admin.py  apps.py  serializers.py  urls.py  views.py
loefsys/config/: common.py  local.py
loefsys/contacts/: __init__.py  apps.py
loefsys/events/: admin.py  apps.py  exceptions.py  feeds.py  forms.py  services.py  tests.py  urls.py  views.py
requirements/: base.txt  local.txt  production.txt
scripts/: django_scripts.py  sphinx_scripts.py
templates/: base.html  desktop-menu.html
users/: apps.py  forms.py  models.py  urls.py  views.py
utility/: generate_model_graph.sh
(+284 files in other folders)
