[tool.poetry]
name = "loefsys"
version = "0.1.0"
description = "The in-house developed website of N.S.Z.V. Loefbijter."
authors = ["Loefbijter Webcie <webcie@loefbijter.nl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "loefsys" }
]

[tool.poetry.scripts]
lint = "loefsys.scripts:lint"
format = "loefsys.scripts:format"
typecheck = "loefsys.scripts:typecheck"
runserver = "loefsys.scripts:runserver"
makemigrations = "loefsys.scripts:makemigrations"
migrate = "loefsys.scripts:migrate"
createsuperuser = "loefsys.scripts:createsuperuser"
collectstatic = "loefsys.scripts:collectstatic"
makedocs = "loefsys.scripts:makedocs"
genapidocs = "loefsys.scripts:genapidocs"

[tool.poetry.dependencies]
python = "^3.12"
argon2-cffi = "^23.1.0"
Django = "^5.0.6"
#django-allauth = "^0.63.5" To implement later
#django-anymail = "^11.0" To implement later
django-classy-settings = "^3.0.4"
#django-crispy-forms = "^2.2" To implement later
django-extensions = "^3.2.3"
#django-storages = { version = "^1.4.4", extras = ["boto3"] }
django-phonenumbers = "^1.0.1"
django-phonenumber-field = "^8.0.0"
django-localflavor = "^4.0"
dj-database-url = "^2.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"
django-dynamic-fixture = "^4.0.1"
django-stubs = { version = "^5.0.2", extras = ["compatible-mypy"] }
mypy = "^1.10.1"
pre-commit = "^3.7.1"
ruff = "^0.5.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-mermaid = "^0.9.2"

[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]
gunicorn = "^22.0.0"
#Collectfast = "^2.2.0" To implement later
psycopg2 = "^2.9.9"

[tool.ruff]
extend-exclude = ["migrations"]
fix = true
indent-width = 4
line-length = 88
show-fixes = true
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["D105", "D106", "D203", "D213", "D416", "ISC001"]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "A",
    "DJ",
    "ISC",
    "PIE",
    "Q",
    "INT",
    "ARG",
    "PL",
    "RUF"
]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-first-party = ["loefsys"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = 3.12
modules = "loefsys"
exclude = [
    ".*/migrations/.*",
    "manage.py"
]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "loefsys.settings"
strict_settings = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
