[project]
name = "loefsys"
version = "0.1.0"
description = "The in-house developed website of N.S.Z.V. Loefbijter."
authors = ["Loefbijter Webcie <webcie@loefbijter.nl>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1.0",
    "dj-database-url>=2.3.0",
    "django>=5.1.5",
    "django-classy-settings>=3.0.7",
    "django-extensions>=3.2.3",
    "django-localflavor>=4.0",
    "django-phonenumber-field>=8.0.0",
    "django-phonenumbers>=1.0.1",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.4",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.0.1",
    "django-dynamic-fixture>=4.0.1",
    "django-stubs>=5.1.2",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.2",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.ruff]
extend-exclude = ["migrations"]
fix = true
indent-width = 4
line-length = 88
show-fixes = true
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["D105", "D106", "D203", "D213", "D416", "ISC001"]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "A",
    "DJ",
    "ISC",
    "PIE",
    "Q",
    "INT",
    "ARG",
    "PL",
    "RUF"
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["D100", "D101", "D102", "D104"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-first-party = ["loefsys"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = 3.12
modules = "loefsys"
exclude = [
    ".*/migrations/.*",
    "manage.py"
]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "loefsys.settings"
strict_settings = false
